Fix z-index for header and ui components

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -6,6 +6,7 @@
   height: 62px;
   display: flex;
   justify-content: space-between;
+  z-index: 100;
 
   background-color: $darkBlue;
 }
