--- a/src/components/ui/drawer/Drawer.module.scss
+++ b/src/components/ui/drawer/Drawer.module.scss
@@ -3,6 +3,7 @@
   top: 62px;
   bottom: 0;
   width: 60vw;
+  z-index: 100;
 
   background-color: #171b1f;
   opacity: 0;
