--- a/src/components/ui/modal/Modal.module.scss
+++ b/src/components/ui/modal/Modal.module.scss
@@ -2,6 +2,7 @@
   position: fixed;
   top: 25%;
   left: 50%;
+  z-index: 100;
 
   transform: translateX(-50%);
   background-color: white;
